project/logs/20251017_125621.log
Use Adapater:NVIDIA GeForce RTX 4060 Laptop GPU

FeatureLevel : 12.2

Complete create D3D12Device!!!

Begin CompileShader,path:Particle.VS.hlsl,profike:vs_6_0

Compile Succeeded, path:Particle.VS.hlsl, profike:vs_6_0
 
Begin CompileShader,path:Particle.PS.hlsl,profike:ps_6_0

Particle.PS.hlsl:7:16: error: use of undeclared identifier 'DirectionalLight'
ConstantBuffer<DirectionalLight> gDirectionalLight : register(b1);
               ^

